[package]
name = "baikal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
colored = "2.0.0"
kalk = { version = "2.1.1", default-features = false }
regex = "1.5.4"
thiserror = "1.0.29"

[lib]
name = "baikal"
path = "src/lib.rs"

[[bin]]
name = "baikal"
path = "src/bin/main.rs"
